@@ -1,14 +1,13 @@
 package com.hntxrj.txerp.im;
 
 // 使用旧版本 base64 编解码实现增强兼容性
-import sun.misc.BASE64Encoder;
-import sun.misc.BASE64Decoder;
 
 import java.io.IOException;
+import java.util.Base64;
 
 public class Base64URL {
     public static byte[] base64EncodeUrl(byte[] input) {
-        byte[] base64 = new BASE64Encoder().encode(input).getBytes();
+        byte[] base64 = Base64.getEncoder().encodeToString(input).getBytes();
         for (int i = 0; i < base64.length; ++i)
             switch (base64[i]) {
                 case '+':
@@ -42,6 +41,6 @@ public class Base64URL {
                 default:
                     break;
             }
-        return new BASE64Decoder().decodeBuffer(base64.toString());
+        return Base64.getDecoder().decode(base64);
     }
 }
